--- a/1-2-nike/index.html
+++ b/1-2-nike/index.html
@@ -29,14 +29,18 @@
         #v_btn a {
             width:100px; margin:0 10px; 
             display:flex; align-items:flex-end;
+            transition: transform 1s;
+            transform-origin: right bottom;
+        }
+        #v_btn a:hover {
+            /* background: red; */
+            /* transform-origin: right bottom; */
+            transform: rotate(15deg);
         }
         #v_btn a img {width:100%;}
     </style>
     <script>
         window.onload=function(){
-
-            
-
         }//e:onload
     </script>
 </head>
