--- a/2-1-math/유니드.html
+++ b/2-1-math/유니드.html
@@ -61,16 +61,34 @@
             display:flex; justify-content: space-between; align-items:center;
         }
         main .center h1 {color:#fff; display:flex; flex-flow:column nowrap; justify-content: space-between;}
-        main .center h1 span {font-size:3.5rem; letter-spacing:-2.5px; padding:10px 0;}
+        main .center h1 span {
+            font-size:3.5rem; letter-spacing:-2.5px; padding:10px 0;}
         main .center .right {
             position:relative; right:174px; top:-100px;
+            animation: x 1s ease both;
         }
         main .center .right span {
             position:absolute; width:174px; height:174px;
+            
         }
-        main .center .right span:nth-child(1) {}
-        main .center .right span:nth-child(2) {text-align:center; line-height:174px;}
+        main .center .right span:nth-child(1) {animation: deg 15s linear alternate-reverse infinite;}
+        main .center .right span:nth-child(2) {
+            text-align:center; line-height:174px;}
+        main .center h1 span:nth-child(1) {animation: text 0.5s ease  forwards;}
+        main .center h1 span:nth-child(2) {animation: text 0.5s ease  0.5s forwards; opacity: 0;}
         /* animation */
+        @keyframes text {
+            0% {transform: translateY(0); opacity:0; color: white;  }
+            100% {transform: translateY(-50px); opacity:1; color: white;}
+        }
+        @keyframes x {
+            0% {transform: translateX(100px); opacity: 0;}
+            100% {transform: translateX(0); opacity: 1;}
+        }
+        @keyframes deg {
+            0% {transform: rotate(0);}
+            100% {transform: rotate(360deg);}
+        }
     </style>
 </head>
 <body>
