--- a/1-5-sola/solasido.html
+++ b/1-5-sola/solasido.html
@@ -23,13 +23,28 @@
             background-position:center;
             opacity:0; transition:opacity 0.5s;
         }
-        .slide_wrap .slide_c .slide1 {background-image:url(images/bg1.jpg); opacity:1}
+        .slide_wrap .slide_c .slide1 {
+            animation: bg 5s linear both;
+            background-image:url(images/bg1.jpg); opacity:1}
         .slide_wrap .slide_c .slide2 {background-image:url(images/bg2.jpg);}
         .slide_wrap .slide_c .slide3 {background-image:url(images/bg3.jpg);}
         .slide_wrap .slide_c .slide p {
             text-align:center; color:#fff;
             font-size:3rem; letter-spacing:-1px;
             position:relative; top:400px;
+        }
+        .slide_wrap .slide_c .slide1 p {
+            animation: font 3s forwards;
+        }
+        @keyframes font{
+            0% {opacity: 0; transform: translateY(0) scale(1);}
+            100% {opacity: 1; transform: translateY(-30px) scale(1.2);}
+        }
+        @keyframes bg{
+            0% {background-size: 100%;}
+            100% {background-size: 130%;}
+            /* scale이 아닌 background-size로 해야하는 이유 */
+            /* transform:scale은 bg뿐 아니라 자식, 자손에 크기까지 영향을 주기 때문 */
         }
         /* class */
 
