--- a/2-1-math/동아출판.html
+++ b/2-1-math/동아출판.html
@@ -35,16 +35,61 @@
         /* 
         1(주황선) 2(책) 3(문어) 4(벌) 5(꽃병) 6(별1) 7(별2)
         */
-        main #deco .obj1 {z-index:9; right:0;}
-        main #deco .obj2 {z-index:10; top:-100px; left:-50px;}
-        main #deco .obj3 {z-index:9; right:190px; top:0;}
-        main #deco .obj4 {z-index:11; right:0; bottom:0;}
-        main #deco .obj5 {z-index:11; right:150px; bottom:0;}
-        main #deco .obj6 {z-index:12; left:-50px; bottom:100px;}
-        main #deco .obj7 {z-index:12; right:50px; top:-30px;}
+        main #deco .obj1 {
+            animation: eye 0.8s linear alternate infinite;
+            z-index:9; right:0;
+        }
+        main #deco .obj2 {
+            animation: book 1s ease forwards;
+            z-index:10; top:-100px; left:-50px;}
+        main #deco .obj3 {
+            animation: oct 1s ease 0.5s both;
+            z-index:9; right:190px; top:0;}
+        main #deco .obj4 {
+            animation: bee 0.5s ease 0.5 both;
+            z-index:11; right:0; bottom:0;
+        }
+        main #deco .obj5 {
+            animation: flower 0.5s linear alternate-reverse infinite;
+            z-index:11; right:150px; bottom:0;
+        }
+        main #deco .obj6 {
+            animation: star1 1.2s linear alternate infinite;
+            z-index:12; left:-50px; bottom:100px;
+        }
+        main #deco .obj7 {
+            animation: star2 0.8s linear alternate infinite;
+            z-index:12; right:50px; top:-30px;}
         
         /* 애니메이션 */
-        
+        @keyframes book {
+            0% {transform: translateX(100px);}
+            100% {transform: translateX(0);}
+        }
+        @keyframes oct {
+            0% {transform: translateY(0);}
+            100% {transform: translateY(-130px);}
+        }
+        @keyframes flower {
+            0% {transform: rotate(10deg);}
+            100% {transform: rotate(0);}
+        }
+        @keyframes eye {
+            0% {transform: rotate(10deg);}
+            100% {transform: rotate(0);}
+        }
+        @keyframes star1 {
+            0% {transform: scale(1);}
+            100% {transform: scale(1.2);}
+        }
+        @keyframes star2 {
+            0% {transform: scale(1);}
+            100% {transform: scale(1.2);}
+        }
+        @keyframes bee {
+            0% {transform: /* translateX(0) translateY(0) */rotate(0) translate(0, 0);}
+            100% {transform: /* translateX(-330px) translateY(100px)  */rotate(60deg) translate(-150px, 500px); }
+        }
 
     </style>
 </head>
