--- a/2-1-math/룩앤플레이.html
+++ b/2-1-math/룩앤플레이.html
@@ -24,33 +24,41 @@
         main #visual #deco .obj {position:absolute;}
 
         main #visual #deco .obj1 {
+            animation: deg 4s linear alternate infinite;
             top:170px; left:50%; margin-left:-342px;
         }
         main #visual #deco .obj2 {
             left:0; top:150px;
+            animation: scale 1s linear alternate infinite;
         }
         main #visual #deco .obj3 {
             left:100px; top:250px;
+            animation: deg 2s linear alternate infinite;
         }
         main #visual #deco .obj4 {
+            animation: scale 1s linear alternate infinite;
             left:150px; top:350px;
         }
         main #visual #deco .obj5 {
+            animation: deg 2s linear alternate-reverse infinite;
             right:0; top:150px;
         }
         main #visual #deco .obj6 {
+            animation: deg 2s linear alternate infinite;
             right:200px; top:250px;
         }
         main #visual #deco .obj7 {
+            animation: scale 1s linear alternate infinite;
             right:200px; top:240px;
         }
         main #visual #deco .obj8 {
+            animation: deg 1.5s linear alternate infinite;
             left:270px; top:440px;
         }
         main #visual #deco .obj9 {
+            animation: scale 1s linear alternate infinite;
             right:0; top:440px;
         }
-
         main #book_center {
             position:absolute; 
             left:50%; bottom:-50px; margin-left:-181px;
@@ -67,9 +75,15 @@
             text-align:center; background:#f1f1f1; color:#222;
         }
         main .category a.active {background:#26bad7; color:#fff;}
-
         /* 애니메이션 */
-
+        @keyframes deg {
+            0% {transform: rotate(0);}
+            100% {transform: rotate(15deg);}
+        }
+        @keyframes scale {
+            0% {transform: scale(1);}
+            100% {transform: scale(1.3);}
+        }
     </style>
 </head>
 <body>
