--- a/2-2-bmw/index.html
+++ b/2-2-bmw/index.html
@@ -10,6 +10,8 @@
         #wrap {
             width:100%; /* height:100vh; */
             background:url(images/bmw_bg.jpg);
+            background-size: cover;
+            background-position: 70%;
             position:relative;
         }
         header {
