--- a/2-4-shopping/index.html
+++ b/2-4-shopping/index.html
@@ -22,8 +22,11 @@
             display:flex; justify-content:space-between;
             flex-flow:column wrap;
         }
-        main section a .img img {width:100%; border-radius:3px;}
-        main section a:hover .img img {}
+        main section a .img img {width:100%; border-radius:3px;
+        transition: filter 1s;}
+        main section a:hover .img img {
+            filter: brightness(200%) grayscale(150%);
+        }
         /* 상품 내용 디자인 상세 */
         main a > span {font-size:0.91rem; letter-spacing:-0.5px; line-height:1.5;}
         main a .name {padding:0 0 5px; margin:0 0 5px; border-bottom:1px solid #ccc;}
