--- a/3-2-lg/ver2.html
+++ b/3-2-lg/ver2.html
@@ -42,6 +42,11 @@
             background:url(images/bg_flow.png) repeat-x left top;
             height:150px; width:100%;
             position:absolute; z-index:30;
+            animation: back 10s linear infinite;
+        }
+        @keyframes back {
+            0% {background-position: 0 0;}
+            100% {background-position: 1000px 0;}
         }
     </style>
 </head>
